Home page modification

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,6 +21,17 @@ bodyClass: "page-home"
   </div>
 </div>
 
+<div class="explain">
+  <div class="container">
+    <div class="row justify-content-start">
+      <div class="col-12 col-md-12 mb-1">
+		<p style="font-size:22px;line-height:40px">Put chemicals in the market is not a easy task. You turn in a  <span style="color:red"> <b>Multi-Loop Carousel</b></span>. When you start, you are in the <b>Research & Development</b> internal loop. If you go on, you jump in the <b>Process & Production</b> external loop. </p>
+		<p style="font-size:22px"> <span style="color:red"> <b>Whatever you do, you are turning and you have to understand how to move. Here, we can help you!</b></span>  </p>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="strip">
   <div class="container pt-6 pb-6 pb-md-10">
     <div class="row justify-content-start">
