--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,7 +27,7 @@ bodyClass: "page-home"
       <div class="col-12 col-md-12 mb-1">
 		<p style="font-size:22px;line-height:40px">Put chemicals in the market is not a easy task. You turn in a  <span style="color:red"> <b>Multi-Loop Carousel</b></span>. When you start, you are in the <b>Research & Development</b> internal loop. If you go on, you jump in the <b>Process & Production</b> external loop. </p>
 		<p style="font-size:22px"> <span style="color:red"> <b>Whatever you do, you are turning and you have to understand how to move. Here, we can help you!</b></span>  </p>
-		<p style="font-size:22px;line-height:40px">Diversified competence are required and they have to be master with expertise to find optimal pathways. Only with a global vision, you can decide if it better change the process, the synthesis, the market of your business. Correlations among the following topics make the joice diffcult.</p>
+		<p style="font-size:22px;line-height:40px">Diversified competences are required and they have to be master with expertise to find optimal solutions. Only with a global vision, you can decide if it is better changing the process, the synthesis,or the market. Correlations among the following topics make the joice difficult.</p>
 
       </div>
     </div>
