--- a/_layouts/services.html
+++ b/_layouts/services.html
@@ -6,14 +6,26 @@ bodyClass: "page-services"
 <div class="intro">
   <div class="container">
     <div class="row justify-content-start">
-      <div class="col-12 col-md-12 col-lg-6 order-2 order-md-1">
+      <div class="col-12 col-md-7 col-lg-7 order-2 order-md-1">
         {{ content }}
       </div>
       {% if page.intro_image %}
-      <div class="col-12 col-md-3 col-lg-6 order-1 order-md-2 position-relative">
+      <div class="col-12 col-md-5 col-lg-5 order-1 order-md-2 position-relative">
         <img alt={{ page.title }} class="intro-image{% if page.intro_image_absolute %} intro-image-absolute{% endif %}{% if page.intro_image_hide_on_mobile %} intro-image-hide-mobile{% endif %}" src="{{ page.intro_image | relative_url }}" />
       </div>
       {% endif %}
+    </div>
+  </div>
+</div>
+
+<div class="proposal">
+  <div class="container">
+    <div class="row justify-content-start">
+      <div class="col-12 col-md-12 mb-1">
+		<p style="font-size:22px;line-height:40px"><b>But are we losing something? Many competencies joined together really make the best possible knowledge?</b></p>
+		<p style="font-size:22px;line-height:40px">We beleave that looking at the business with a global overview has some advantages. You can see the external correlations that link expertises. You better highlight the weak points and you manage more alternative solutions. Of course, this is not easy. You need to rebuild a global vision overpassing your competences.</p>
+		<p style="font-size:22px;line-height:40px">This is what we propose: <span style="color:red"> <b>continuosly review your business looking at it as a whole without omitting any part.</b></span></p>
+      </div>
     </div>
   </div>
 </div>
